@@ -1,5 +1,7 @@
 2006-01-25  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c (dfsch_vector_2_list): Fixed segfaults in list->vector
+
 	* New way of handling objects in memory 
 
 2006-01-23  Ales Hakl  <ales at hakl dot net>
